2006-09-29  Casey Marshall  <csm@gnu.org>

	PR 29190
	* gnu/java/nio/EpollSelectionKeyImpl.java: extend
	`AbstractSelectionKey.'
	(cancel, isValid): removed.
	* gnu/java/nio/EpollSelectorImpl.java (cancelledKeys): removed.
	(events): new field.
	(INITIAL_CAPACITY, MAX_DOUBLING_CAPACITY, CAPACITY_INCREMENT): new
	fields.
	(<clinit>): initialize those constants.
	(<init>): don't initialize `cancelledKeys;' initialize `events.'
	(doSelect): deregister cancelled keys; remove keys attached to
	closed channels; wrap `epoll_wait' in `begin' and `end' calls; use
	`events' buffer; reallocate `events' buffer if needed.
	(register): reallocate `events' buffer if needed.
	(reallocateBuffer): new method.
	(cancel): removed.

2006-09-29  Roman Kennke  <kennke@aicas.com>

	PR 28929
	* javax/swing/JViewport.java
	(cinit): Renamed system property to gnu.swing.scrollmode
	to avoid bloat. Default to BACKINGSTORE, this is much
	more reliable.
	(repaint): Forward repaint() to parent as is specified.

2006-08-29  Tania Bento  <tbento@redhat.com>

	* javax/swing/plaf/basic/BasicTableUI.java
	(getPreferredSize): The number of iterations for the for-loop should be
	the number of columns in the table's column model, not the number of
	columns of the table.
	* javax/swing/JTable.java
	(JTable(TableModel, TableColumnModel, ListSelectionModel): Removed 4
	lines that are not needed.
	(initializeLocalVars): dragEnabled should be set to false, not true.
	(getCellRenderer): Added a check to prevent an
	ArrayIndexOutOfBoundsException.
	(doLayout): The number of iterations for the for-loops should be the
	number of columns in the table's column model, not the number of columns
	of the table.

2006-09-29  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/java2d/AbstractGraphics2D.java: Updated
	API docs.
	(isOptimized): Initialize with true.
	(paintRaster): Removed unneeded field.
	(shapeCache): New static field. Caches certain shapes for reuse.
	(computeIntersection): Removed unneeded casts.