@@ -119,14 +119,10 @@ public class Rectangle extends Rectangle2D implements Shape, Serializable
    * coordinates of the specified rectangle.
    *
    * @param r the rectangle to copy from
-   * @throws NullPointerException if r is null
    * @since 1.1
    */
   public Rectangle(Rectangle r)
   {
-    if (r == null)
-      throw new NullPointerException();
-    
     x = r.x;
     y = r.y;
     width = r.width;
@@ -171,13 +167,9 @@ public class Rectangle extends Rectangle2D implements Shape, Serializable
    *
    * @param p the upper left corner of the rectangle
    * @param d the width and height of the rectangle
-   * @throws NullPointerException if p or d is null
    */
   public Rectangle(Point p, Dimension d)
   {
-    if (p == null || d == null)
-      throw new NullPointerException();
-    
     x = p.x;
     y = p.y;
     width = d.width;
@@ -189,13 +181,9 @@ public class Rectangle extends Rectangle2D implements Shape, Serializable
    * corner at the specified point and a width and height of zero.
    *
    * @param p the upper left corner of the rectangle
-   * @throws NullPointerException if p is null
    */
   public Rectangle(Point p)
-  {
-    if (p == null)
-      throw new NullPointerException();
-    
+  { 
     x = p.x;
     y = p.y;
   }
@@ -206,13 +194,9 @@ public class Rectangle extends Rectangle2D implements Shape, Serializable
    * by the specified dimension.
    *
    * @param d the width and height of the rectangle
-   * @throws NullPointerException if d is null
    */
   public Rectangle(Dimension d)
-  {
-    if (d == null)
-      throw new NullPointerException();
-    
+  {  
     width = d.width;
     height = d.height;
   }
